welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: ';' expected but ')' found.
  if (negative == false) & (a*b < 0)) {return true}
                                    ^